# GazeboWindows

./: README.md  setup.bat
gz-ws/: setup.bat
gz-ws/.gazebo/: xxgui.ini
gz-ws/.gazebo/Models/9dof/: 9dof.sdf  model.config  world1.world
gz-ws/.gazebo/Models/ganzang/: model.config  model.sdf
gz-ws/.gazebo/Models/map_satellite_37.386491_-122.065255_100_100/: model.config  model.sdf
gz-ws/.gazebo/Models/my_conveyor/: model.config  model.urdf
gz-ws/.gazebo/Models/my_gripper/: model.config  simple_gripper.sdf
gz-ws/.gazebo/Models/my_mesh/: model.config  model.sdf
gz-ws/.gazebo/Models/my_model/: model.config  model.sdf
gz-ws/.gazebo/Models/my_robot/: model.sdf
gz-ws/.gazebo/Models/my_robot2/: model.config  model.sdf
gz-ws/.gazebo/Models/my_robot3/: model.config  model.sdf
gz-ws/ganzang01/: CMakeLists.txt  configure.bat  ganzang01.world  ganzang_spin.cc
gz-ws/lib/: gazebo_gui.lib  gazebo_physics.lib  gazebo_rendering.lib
gz-ws/lib/Release/: OgreOverlay.lib  OgrePaging.lib  OgreProperty.lib  OgreRTShaderSystem.lib  OgreTerrain.lib  OgreVolume.lib
gz-ws/sdformat/1.6/: actor.xsd  atmosphere.xsd  audio_source.xsd  battery.xsd  camera.xsd  collision.xsd  forcetorque.xsd  frame.xsd  gui.xsd  heightmap_shape.xsd  imu.xsd  inertial.xsd  joint.xsd  light.xsd  light_state.xsd  link.xsd  link_state.xsd  model.xsd  model_state.xsd  physics.xsd  population.xsd  pose.xsd  projector.xsd  sensor.xsd  sonar.xsd  spherical_coordinates.xsd  state.xsd  surface.xsd  visual.xsd  world.xsd
gz-ws/share/gazebo/: setup.bat
gz-ws/share/gazebo-10/: setup.sh
(+55 files in other folders)
